@@ -22,31 +22,33 @@ import static android.health.connect.HealthDataCategory.CYCLE_TRACKING;
 import static android.health.connect.HealthDataCategory.NUTRITION;
 import static android.health.connect.HealthDataCategory.SLEEP;
 import static android.health.connect.HealthDataCategory.VITALS;
+import static android.healthconnect.cts.utils.HealthConnectReceiver.callAndGetResponseWithShellPermissionIdentity;
 import static android.healthconnect.cts.utils.PermissionHelper.MANAGE_HEALTH_DATA;
-import static android.healthconnect.cts.utils.TestUtils.getPriority;
-import static android.healthconnect.cts.utils.TestUtils.getPriorityWithManageHealthDataPermission;
-import static android.healthconnect.cts.utils.TestUtils.updatePriority;
-import static android.healthconnect.cts.utils.TestUtils.updatePriorityWithManageHealthDataPermission;
+import static android.healthconnect.cts.utils.TestOutcomeReceiver.outcomeExecutor;
 
 import static com.google.common.truth.Truth.assertThat;
 
-import android.app.UiAutomation;
+import static java.util.Objects.requireNonNull;
+
+import android.content.Context;
 import android.health.connect.FetchDataOriginsPriorityOrderResponse;
 import android.health.connect.HealthConnectException;
+import android.health.connect.HealthConnectManager;
+import android.health.connect.UpdateDataOriginPriorityOrderRequest;
+import android.health.connect.datatypes.DataOrigin;
 import android.healthconnect.cts.utils.AssumptionCheckerRule;
+import android.healthconnect.cts.utils.HealthConnectReceiver;
 import android.healthconnect.cts.utils.TestUtils;
 
-import androidx.test.InstrumentationRegistry;
+import androidx.test.core.app.ApplicationProvider;
 import androidx.test.ext.junit.runners.AndroidJUnit4;
 
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
@@ -54,20 +56,21 @@ import java.util.Set;
 public class HealthPermissionCategoryPriorityTests {
     private static final Set<Integer> sAllDataCategories =
             Set.of(ACTIVITY, BODY_MEASUREMENTS, CYCLE_TRACKING, NUTRITION, SLEEP, VITALS);
-    private static final String TAG = "PermissionCategoryPriorityTests";
-    private static final UiAutomation sUiAutomation =
-            InstrumentationRegistry.getInstrumentation().getUiAutomation();
 
     public static final String PACKAGE_NAME = "android.healthconnect.cts";
-    public static final String OTHER_PACKAGE_NAME = "";
 
     @Rule
     public AssumptionCheckerRule mSupportedHardwareRule =
             new AssumptionCheckerRule(
-                    TestUtils::isHardwareSupported, "Tests should run on supported hardware only.");
+                    TestUtils::isHealthConnectFullySupported,
+                    "Tests should run on supported hardware only.");
+
+    private HealthConnectManager mManager;
 
     @Before
     public void setUp() {
+        Context context = ApplicationProvider.getApplicationContext();
+        mManager = requireNonNull(context.getSystemService(HealthConnectManager.class));
         TestUtils.deleteAllStagedRemoteData();
     }
 
@@ -79,66 +82,94 @@ public class HealthPermissionCategoryPriorityTests {
     @Test
     public void testGetPriority() throws InterruptedException {
         for (Integer permissionCategory : sAllDataCategories) {
-            assertThat(getPriorityWithManageHealthDataPermission(permissionCategory)).isNotNull();
+            FetchDataOriginsPriorityOrderResponse response =
+                    callAndGetResponseWithShellPermissionIdentity(
+                            (executor, receiver) ->
+                                    mManager.fetchDataOriginsPriorityOrder(
+                                            permissionCategory, executor, receiver),
+                            MANAGE_HEALTH_DATA);
+
+            assertThat(response).isNotNull();
         }
     }
 
     @Test
     public void testGetPriority_no_perm() throws InterruptedException {
         for (Integer permissionCategory : sAllDataCategories) {
-            try {
-                getPriority(permissionCategory);
-                Assert.fail("Get Priority must not be allowed without right HC permission");
-            } catch (HealthConnectException healthConnectException) {
-                assertThat(healthConnectException.getErrorCode())
-                        .isEqualTo(HealthConnectException.ERROR_SECURITY);
-            }
+            HealthConnectReceiver<FetchDataOriginsPriorityOrderResponse> receiver =
+                    new HealthConnectReceiver<>();
+            mManager.fetchDataOriginsPriorityOrder(permissionCategory, outcomeExecutor(), receiver);
+
+            HealthConnectException healthConnectException = receiver.assertAndGetException();
+            assertThat(healthConnectException.getErrorCode())
+                    .isEqualTo(HealthConnectException.ERROR_SECURITY);
         }
     }
 
     @Test
     public void testUpdatePriority_withNewApps_updatesCorrectly() throws InterruptedException {
-        sUiAutomation.adoptShellPermissionIdentity(MANAGE_HEALTH_DATA);
+        for (Integer permissionCategory : sAllDataCategories) {
+            FetchDataOriginsPriorityOrderResponse currentPriority =
+                    callAndGetResponseWithShellPermissionIdentity(
+                            (executor, receiver) ->
+                                    mManager.fetchDataOriginsPriorityOrder(
+                                            permissionCategory, executor, receiver),
+                            MANAGE_HEALTH_DATA);
+            assertThat(currentPriority).isNotNull();
+            // The initial priority list is empty at this stage because permissions have
+            // been granted through packageManager
+            // TODO (b/314092270) - remove when the priority list is updated via the package
+            // manager
+            assertThat(currentPriority.getDataOriginsPriorityOrder()).isEmpty();
 
-        try {
-            for (Integer permissionCategory : sAllDataCategories) {
+            UpdateDataOriginPriorityOrderRequest updateRequest =
+                    createUpdateRequest(List.of(PACKAGE_NAME), permissionCategory);
+            Void unused =
+                    callAndGetResponseWithShellPermissionIdentity(
+                            (executor, receiver) ->
+                                    mManager.updateDataOriginPriorityOrder(
+                                            updateRequest, executor, receiver),
+                            MANAGE_HEALTH_DATA);
 
-                FetchDataOriginsPriorityOrderResponse currentPriority =
-                        getPriorityWithManageHealthDataPermission(permissionCategory);
-                assertThat(currentPriority).isNotNull();
-                // The initial priority list is empty at this stage because permissions have
-                // been granted through packageManager
-                // TODO (b/314092270) - remove when the priority list is updated via the package
-                // manager
-                assertThat(currentPriority.getDataOriginsPriorityOrder()).isEmpty();
+            FetchDataOriginsPriorityOrderResponse newPriority =
+                    callAndGetResponseWithShellPermissionIdentity(
+                            (executor, receiver) ->
+                                    mManager.fetchDataOriginsPriorityOrder(
+                                            permissionCategory, executor, receiver),
+                            MANAGE_HEALTH_DATA);
 
-                List<String> newPriorityListPackages = Arrays.asList(PACKAGE_NAME);
-                updatePriorityWithManageHealthDataPermission(
-                        permissionCategory, newPriorityListPackages);
-                FetchDataOriginsPriorityOrderResponse newPriority =
-                        getPriorityWithManageHealthDataPermission(permissionCategory);
-
-                assertThat(newPriority.getDataOriginsPriorityOrder().size()).isEqualTo(1);
-                assertThat(newPriority.getDataOriginsPriorityOrder().get(0).getPackageName())
-                        .isEqualTo(PACKAGE_NAME);
-            }
-        } finally {
-            sUiAutomation.dropShellPermissionIdentity();
+            assertThat(newPriority.getDataOriginsPriorityOrder()).hasSize(1);
+            assertThat(newPriority.getDataOriginsPriorityOrder().get(0).getPackageName())
+                    .isEqualTo(PACKAGE_NAME);
         }
     }
 
     @Test
     public void testUpdatePriority_no_perm() throws InterruptedException {
         for (Integer permissionCategory : sAllDataCategories) {
-            try {
-                updatePriority(permissionCategory, Arrays.asList("a", "b", "c"));
-                Assert.fail("Update priority must not be allowed without right HC permission");
-            } catch (HealthConnectException healthConnectException) {
-                assertThat(healthConnectException.getErrorCode())
-                        .isEqualTo(HealthConnectException.ERROR_SECURITY);
-            }
+            UpdateDataOriginPriorityOrderRequest updateRequest =
+                    createUpdateRequest(List.of("a", "b", "c"), permissionCategory);
+            HealthConnectReceiver<Void> receiver = new HealthConnectReceiver<>();
+            mManager.updateDataOriginPriorityOrder(updateRequest, outcomeExecutor(), receiver);
+
+            HealthConnectException healthConnectException = receiver.assertAndGetException();
+            assertThat(healthConnectException.getErrorCode())
+                    .isEqualTo(HealthConnectException.ERROR_SECURITY);
         }
     }
 
     // TODO(b/261618513): Test actual priority order by using other test apps
+
+    private static UpdateDataOriginPriorityOrderRequest createUpdateRequest(
+            List<String> packageNames, int dataCategory) {
+        List<DataOrigin> dataOrigins =
+                packageNames.stream()
+                        .map(
+                                (packageName) ->
+                                        new DataOrigin.Builder()
+                                                .setPackageName(packageName)
+                                                .build())
+                        .toList();
+        return new UpdateDataOriginPriorityOrderRequest(dataOrigins, dataCategory);
+    }
 }
